--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mean stack backend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [
     "Mongo",
@@ -16,5 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^5.16.0"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.0"
   }
 }
