--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Mean stack backend",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "lint": "./node_modules/.bin/eslint **/*.js",
+    "start": "npm run lint & nodemon app.js"
   },
   "keywords": [
     "Mongo",
@@ -18,7 +19,9 @@
     "eslint": "^5.16.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.0"
+    "express": "^4.17.0",
+    "mongoose": "^5.5.11"
   }
 }
